k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: felfel-taskwork-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: felfel-taskwork
      role: web
  template:
    metadata:
      labels:
        app: felfel-taskwork
        role: web
    spec:
      containers:
      - name: webapp
        image: felfel-taskwork:latest
        imagePullPolicy: IfNotPresent # required for using a local container on minikube, etc
        ports:
        - containerPort: 8080
      - name: redis
        image: redis:7.2-alpine
