k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: felfel-taskwork-web
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
spec:
  selector:
    app: felfel-taskwork
    role: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
